Replace deprecated Boolean constructor